# yonsei-exchange-program

./: .gitignore  DK000003.csv  KONLPY_Wordcloud_practice.ipynb  Korean_Departments.md  README.md  UTF-8 csv Reckoned Excel.xlsx  UoC_sample_1.csv  _Department_Analysis.ipynb  _Newest_Wordcloud_Analysis.ipynb  analyze_BERT_nsmc.ipynb  analyze_BERT_nsmc_corpus.ipynb  analyze_RNN.ipynb  analyze_sentiment.ipynb  analyze_sentiment_nsmc_bert.ipynb  analyze_using_RNN.ipynb  cluster_departments.ipynb  cluster_departments_Kmeans.ipynb  colab_to_pycharm.py  collect_reviews.py  compare_bic_mac.ipynb  compare_starbucks_index.ipynb  crawling.py  create_wordcloud.ipynb  data_analyze.py  data_collect.py  data_process.py  department_wrangling.py  derpartment_nogada.md  extract_keyword.ipynb  extract_keyword_iterrate.ipynb  extract_keyword_itterate.ipynb  extract_keyword_term_frequency.ipynb  extract_keyword_tfidf.ipynb  extract_keyword_wordrank.ipynb  generate_wordcloud_konlpy.ipynb  get_univ_list.py  jupyter play.ipynb  konlpy-wordcloud.ipynb  mono_candidates.md  plot_departments.ipynb  (+20 more)
.ipynb_checkpoints/: collect_reviews-checkpoint.ipynb  generate_wordcloud_koelectra-checkpoint.ipynb
_archived/: _Newest_Wordcloud_Analysis.ipynb  colab_to_pycharm.py  collect_reviews.py  data_analyze.py  generate_wordcloud.ipynb  generate_wordcloud_konlpy.ipynb  generate_wordcloud_tfidf.ipynb  get_univ_list.py
data/: _department_t.csv  coffee_2019.csv  department_data.csv  univ_db_full.csv  univ_geo.csv
data_wrangled/: big_mac_price_level_comparison_2020.csv  department_data.csv  df_ranking.csv  (+7 more)
(+2678 files in other folders)
