[tool.poetry]
name = "yonsei_exchange_text_wrangling"
version = "0.1.0"
description = ""
authors = ["noopy <young_ahn@yonsei.ac.kr>"]

[tool.poetry.dependencies]
python = "^3.8"
plotnine = "^0.7.0"
bs4 = "^0.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
